--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "typeorm-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/app.ts",
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "nodemon src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "typeorm": "^0.3.16"
   }
 }
