--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,9 @@
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "pg": "^8.11.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
